# metarustistic

./: Cargo.toml  README.md  perf.data  perf.data.old
crates/metarustistic-functions/: Cargo.toml
crates/metarustistic-functions/src/: lib.rs
crates/metarustistic-optimizers/: Cargo.toml
crates/metarustistic-optimizers/src/: lib.rs  pso.rs  random.rs  random_walk.rs
crates/metarustistic-plotters/: Cargo.toml
crates/metarustistic-plotters/src/: plotter_3d.rs
examples/: rw_rastrigin_2d.rs
examples/pso_rastrigin/: Cargo.toml
examples/pso_rastrigin/src/: main.rs
examples/rw_rastrigin/: Cargo.toml
metarustistic/: README.md
src/: lib.rs  main.rs  prelude.rs  problem.rs
src/functions/: bounded_function.rs  mod.rs
src/optimizers/: mod.rs  random_walk.rs
src/plotters/: mod.rs  plotter_2d.rs
src/random/: mod.rs
