[package]
name = "rw_rastrigin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metarustistic-functions={path="../../crates/metarustistic-functions"}
metarustistic-optimizers={path="../../crates/metarustistic-optimizers"}
metarustistic-plotters={path="../../crates/metarustistic-plotters"}